--- a/apps/financial_system_web/assets/.babelrc
+++ b/apps/financial_system_web/assets/.babelrc
@@ -1,6 +1,14 @@
 {
-    "presets": [
-        "@babel/preset-env",
-        "@babel/preset-react"
+  "presets": [
+    "@babel/preset-react",
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": false
+      }
     ]
+  ],
+  "plugins": [
+    "@babel/plugin-transform-runtime"
+  ]
 }
