--- a/apps/financial_system_web/assets/package.json
+++ b/apps/financial_system_web/assets/package.json
@@ -6,9 +6,13 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "add": "^2.0.6",
+    "apisauce": "^1.1.1",
     "axios": "^0.19.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "formik": "^2.0.6",
     "phoenix": "file:../../../deps/phoenix",
     "phoenix_html": "file:../../../deps/phoenix_html",
